--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon app.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
