--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   "dependencies": {
     "@prisma/client": "^5.16.0",
     "bcrypt": "^5.1.1",
+    "bunyan": "^1.8.15",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
+    "error-handler": "^1.0.0",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
+    "http-status-codes": "^2.3.0",
     "morgan": "~1.9.1",
     "pug": "^3.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bunyan": "^1.8.11",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
