--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
     "http-status-codes": "^2.3.0",
+    "js-big-decimal": "^2.0.7",
     "morgan": "~1.9.1",
     "pug": "^3.0.3"
   },
